--- a/index.html
+++ b/index.html
@@ -2,51 +2,55 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sleep Tracker</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sleep Tracker</title>
 
-    <link href="css/index.css" rel="stylesheet">
-    <!-- <link href="https://fonts.googleapis.com/css?family=x|x" rel="stylesheet"> -->
-    <script src="https://kit.fontawesome.com/39c846d5c6.js" crossorigin="anonymous"></script>
+  <link href="css/index.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Norican|Roboto&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/39c846d5c6.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
-    <header>
-        <div class="navContainer">
-            <div id="headlogo">
-              <i class="fas fa-cloud-moon"></i><h1>Sleep Tracker</h1>
-            </div>
-            <nav>
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Login</a>
-            </nav>
-        </div>
-    </header>
-
-    <div class="container">
-      <section class="splash">
-        <button id="account">Create Account</button>
-      </section>
-      <section class="content">
-        <div class="content-text">
-          <h2>Filler Text</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam laborum animi necessitatibus ipsum sed facere ea, rerum recusandae natus fuga perspiciatis, eveniet optio voluptatum beatae quo quisquam asperiores odio quam.</p>
-        </div>
-        <div class="content-graph">
-          <img src="#" alt="Graph example" />
-        </div>
-      </section>
-    </div>
-
-    <footer>
-      <div id="footlogo">
-        <i class="fas fa-cloud-moon"></i><h1>Sleep Tracker</h1>
+  <header>
+    <div class="navContainer">
+      <div class="logo">
+        <i class="fas fa-cloud-moon"></i>
+        <h1>Sleep Tracker</h1>
       </div>
-      <small>&copy; Copyright 2020, NAME</small>
-    </footer>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Login</a>
+      </nav>
+    </div>
+  </header>
+
+  <div class="container">
+    <section class="splash">
+      <button id="account">Create Account</button>
+    </section>
+    <section class="content">
+      <div class="content-text">
+        <h3>Filler Text</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam laborum animi necessitatibus ipsum sed facere
+          ea, rerum recusandae natus fuga perspiciatis, eveniet optio voluptatum beatae quo quisquam asperiores odio
+          quam.</p>
+      </div>
+      <div class="content-graph">
+        <img src="#" alt="Graph example" />
+      </div>
+    </section>
+  </div>
+
+  <footer>
+    <div class="logo">
+      <i class="fas fa-cloud-moon footlogo"></i>
+      <h2 class="footlogo">Sleep Tracker</h2>
+    </div>
+    <small>&copy; Copyright 2020, NAME</small>
+  </footer>
 
 </body>
 
