--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   <title>Sleep Tracker | About</title>
 
   <link href="css/index.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lato|Norican|Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/39c846d5c6.js" crossorigin="anonymous"></script>
 </head>
 
@@ -27,8 +27,80 @@
   </header>
 
   <div class="container">
-    <section class="content">
+    <section class="team-section">
       <!-- Content  -->
+      <h3>Our Team</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ullam porro labore maiores, ut temporibus!
+        Soluta ex rem architecto odio exercitationem quisquam quia alias qui. Mollitia commodi voluptates
+        necessitatibus sint.</p>
+    </section>
+    <section class="member-section">
+      <div class="member">
+        <img src="#" alt="Photograph of member" />
+        <div class="member-text">
+          <h3>About Member</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus ratione, aut fuga dolores ipsum id animi
+            distinctio tempora nobis officia? Culpa fuga tempore tenetur soluta saepe nostrum nisi cupiditate fugiat!
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia, optio! Minima commodi necessitatibus
+            corporis eveniet architecto veniam ex labore, aperiam maiores aut, quo harum sequi beatae, est voluptatum
+            ratione nisi?</p>
+        </div>
+      </div>
+      <div class="member">
+        <img src="#" alt="Photograph of member" />
+        <div class="member-text">
+          <h3>About Member</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus ratione, aut fuga dolores ipsum id animi
+            distinctio tempora nobis officia? Culpa fuga tempore tenetur soluta saepe nostrum nisi cupiditate fugiat!
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia, optio! Minima commodi necessitatibus
+            corporis eveniet architecto veniam ex labore, aperiam maiores aut, quo harum sequi beatae, est voluptatum
+            ratione nisi?</p>
+        </div>
+      </div>
+      <div class="member">
+        <img src="#" alt="Photograph of member" />
+        <div class="member-text">
+          <h3>About Member</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus ratione, aut fuga dolores ipsum id animi
+            distinctio tempora nobis officia? Culpa fuga tempore tenetur soluta saepe nostrum nisi cupiditate fugiat!
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia, optio! Minima commodi necessitatibus
+            corporis eveniet architecto veniam ex labore, aperiam maiores aut, quo harum sequi beatae, est voluptatum
+            ratione nisi?</p>
+        </div>
+      </div>
+      <div class="member">
+        <img src="#" alt="Photograph of member" />
+        <div class="member-text">
+          <h3>About Member</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus ratione, aut fuga dolores ipsum id animi
+            distinctio tempora nobis officia? Culpa fuga tempore tenetur soluta saepe nostrum nisi cupiditate fugiat!
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia, optio! Minima commodi necessitatibus
+            corporis eveniet architecto veniam ex labore, aperiam maiores aut, quo harum sequi beatae, est voluptatum
+            ratione nisi?</p>
+        </div>
+      </div>
+      <div class="member">
+        <img src="#" alt="Photograph of member" />
+        <div class="member-text">
+          <h3>About Member</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus ratione, aut fuga dolores ipsum id animi
+            distinctio tempora nobis officia? Culpa fuga tempore tenetur soluta saepe nostrum nisi cupiditate fugiat!
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia, optio! Minima commodi necessitatibus
+            corporis eveniet architecto veniam ex labore, aperiam maiores aut, quo harum sequi beatae, est voluptatum
+            ratione nisi?</p>
+        </div>
+      </div>
+      <div class="member">
+        <img src="#" alt="Photograph of member" />
+        <div class="member-text">
+          <h3>About Member</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus ratione, aut fuga dolores ipsum id animi
+            distinctio tempora nobis officia? Culpa fuga tempore tenetur soluta saepe nostrum nisi cupiditate fugiat!
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia, optio! Minima commodi necessitatibus
+            corporis eveniet architecto veniam ex labore, aperiam maiores aut, quo harum sequi beatae, est voluptatum
+            ratione nisi?</p>
+        </div>
+      </div>
     </section>
   </div>
 
