--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sleep Tracker</title>
+  <title>SleepTracker</title>
 
   <link href="css/index.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lato|Norican|Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/39c846d5c6.js" crossorigin="anonymous"></script>
 </head>
 
@@ -16,8 +16,7 @@
   <header>
     <div class="navContainer">
       <div class="logo">
-        <i class="fas fa-cloud-moon"></i>
-        <h1>Sleep Tracker</h1>
+        <i class="fas fa-cloud-moon"></i><h1>Sleep Tracker</h1>
       </div>
       <nav>
         <a href="#">Home</a>
