footer content styles

--- a/index.html
+++ b/index.html
@@ -26,19 +26,21 @@
     </div>
   </header>
 
+  <div class="splash">
+    <button id="account">Create Account</button>
+  </div>
+  
   <div class="container">
-    <section class="splash">
-      <button id="account">Create Account</button>
-    </section>
     <section class="content">
       <div class="content-text">
-        <h3>Filler Text</h3>
+        <h3>Filler Text About Sleep Quality</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam laborum animi necessitatibus ipsum sed facere
           ea, rerum recusandae natus fuga perspiciatis, eveniet optio voluptatum beatae quo quisquam asperiores odio
           quam.</p>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa fugiat illo debitis omnis eveniet doloribus? Minus, amet asperiores soluta commodi ab aperiam adipisci iure vitae, itaque dolores dolorum, tempore saepe. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi autem eius unde repellat minima, alias quod expedita cum eveniet perspiciatis saepe placeat, hic quisquam, ullam rerum repellendus. Odit, quae voluptatem.</p>
       </div>
       <div class="content-graph">
-        <img src="#" alt="Graph example" />
+        <img src="/assets/placeholder-chart.png" alt="Graph example" />
       </div>
     </section>
   </div>
