splash working yay

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>SleepTracker</title>
 
   <link href="css/index.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Barlow|Roboto&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/39c846d5c6.js" crossorigin="anonymous"></script>
 </head>
 
