--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div class="container">
     <section class="content">
       <div class="content-text">
-        <h3>Filler Text About Sleep Quality</h3>
+        <h3>Filler Text About Sleep</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam laborum animi necessitatibus ipsum sed facere
           ea, rerum recusandae natus fuga perspiciatis, eveniet optio voluptatum beatae quo quisquam asperiores odio
           quam.</p>
