about and main styling complete

--- a/about.html
+++ b/about.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sleep Tracker | About</title>
+  <title>SleepTracker | About</title>
 
   <link href="css/index.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Barlow|Roboto&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/39c846d5c6.js" crossorigin="anonymous"></script>
 </head>
 
@@ -19,85 +19,76 @@
         <h1>Sleep Tracker</h1>
       </div>
       <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
+        <a href="/index.html">Home</a>
+        <a href="/about.html">About</a>
         <a href="#">Login</a>
       </nav>
     </div>
   </header>
 
   <div class="container">
-    <section class="team-section">
-      <h3>Our Team</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ullam porro labore maiores, ut temporibus!
-        Soluta ex rem architecto odio exercitationem quisquam quia alias qui. Mollitia commodi voluptates
-        necessitatibus sint.</p>
-    </section>
     <section class="member-section">
       <div class="member">
-        <img src="#" alt="Photograph of member" />
+        <img src="https://ca.slack-edge.com/T4JUEB3ME-UHK6F06DC-a1bd4d1c8daa-512"
+          alt="Nicholas outside a grey brick building wearing a grey polo shirt and backpack grinning into the camera." />
         <div class="member-text">
-          <h3>About Member</h3>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus ratione, aut fuga dolores ipsum id animi
-            distinctio tempora nobis officia? Culpa fuga tempore tenetur soluta saepe nostrum nisi cupiditate fugiat!
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia, optio! Minima commodi necessitatibus
-            corporis eveniet architecto veniam ex labore, aperiam maiores aut, quo harum sequi beatae, est voluptatum
-            ratione nisi?</p>
+          <h3>Nicholas Gonzalez</h3>
+          <p>Team Leader - WEB22</p>
+          <a href="#">LinkedIn</a>
+        </div>
+      </div>
+      <div class="member-reverse">
+        <img src="https://ca.slack-edge.com/T4JUEB3ME-UMSPM525V-5c3653c9fbb1-512"
+          alt="Janessa outside in front of trees wearing a blue button up, smiling widely." />
+        <div class="member-text">
+          <h3>Janessa Garrow</h3>
+          <p>Front End - WEBPT11</p>
+          <a href="#">LinkedIn</a>
         </div>
       </div>
       <div class="member">
-        <img src="#" alt="Photograph of member" />
+        <img src="https://ca.slack-edge.com/T4JUEB3ME-UHUA5BZR9-9b0776ed37af-512"
+          alt="Josh outside in front of a fir tree wearing a brown flannel and glasses, smiling and looking down to the left." />
         <div class="member-text">
-          <h3>About Member</h3>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus ratione, aut fuga dolores ipsum id animi
-            distinctio tempora nobis officia? Culpa fuga tempore tenetur soluta saepe nostrum nisi cupiditate fugiat!
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia, optio! Minima commodi necessitatibus
-            corporis eveniet architecto veniam ex labore, aperiam maiores aut, quo harum sequi beatae, est voluptatum
-            ratione nisi?</p>
+          <h3>Josh Luscombe</h3>
+          <p>Front End</p>
+          <a href="#">LinkedIn</a>
         </div>
       </div>
-      <div class="member">
-        <img src="#" alt="Photograph of member" />
+      <div class="member-reverse">
+        <img src="https://ca.slack-edge.com/T4JUEB3ME-UJUGXB23W-9f39842ae662-512"
+          alt="A closeup of Eduardo smiling wearing a red t-shirt." />
         <div class="member-text">
-          <h3>About Member</h3>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus ratione, aut fuga dolores ipsum id animi
-            distinctio tempora nobis officia? Culpa fuga tempore tenetur soluta saepe nostrum nisi cupiditate fugiat!
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia, optio! Minima commodi necessitatibus
-            corporis eveniet architecto veniam ex labore, aperiam maiores aut, quo harum sequi beatae, est voluptatum
-            ratione nisi?</p>
+          <h3>Eduardo Jimenez</h3>
+          <p>Front End</p>
+          <a href="#">LinkedIn</a>
         </div>
       </div>
-      <div class="member">
-        <img src="#" alt="Photograph of member" />
-        <div class="member-text">
-          <h3>About Member</h3>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus ratione, aut fuga dolores ipsum id animi
-            distinctio tempora nobis officia? Culpa fuga tempore tenetur soluta saepe nostrum nisi cupiditate fugiat!
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia, optio! Minima commodi necessitatibus
-            corporis eveniet architecto veniam ex labore, aperiam maiores aut, quo harum sequi beatae, est voluptatum
-            ratione nisi?</p>
+        <div class="member">
+          <img src="https://ca.slack-edge.com/T4JUEB3ME-UMU0G7S7R-39d2605a998d-512"
+            alt="Cai smiling and wearing a black polo in front of a wall." />
+          <div class="member-text">
+            <h3>Cai Nowicki</h3>
+            <p>Data Science - DSPT3</p>
+            <a href="#">LinkedIn</a>
         </div>
-      </div>
-      <div class="member">
-        <img src="#" alt="Photograph of member" />
-        <div class="member-text">
-          <h3>About Member</h3>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus ratione, aut fuga dolores ipsum id animi
-            distinctio tempora nobis officia? Culpa fuga tempore tenetur soluta saepe nostrum nisi cupiditate fugiat!
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia, optio! Minima commodi necessitatibus
-            corporis eveniet architecto veniam ex labore, aperiam maiores aut, quo harum sequi beatae, est voluptatum
-            ratione nisi?</p>
         </div>
-      </div>
+        <div class="member-reverse">
+          <img src="https://ca.slack-edge.com/T4JUEB3ME-ULA6KM6K0-fdf16900381a-512"
+            alt="A closeup of Westley grinning wearing black rimmed glasses." />
+          <div class="member-text">
+            <h3>Westley Feller</h3>
+            <p>Back End</p>
+            <a href="#">LinkedIn</a>
+          </div>
+        </div>
       <div class="member">
-        <img src="#" alt="Photograph of member" />
+        <img src="https://ca.slack-edge.com/T4JUEB3ME-USA5PJWGN-13ec1c6e1558-512"
+          alt="Reanna smiling wearing a brightly colored shirt featuring various pokemon and a red lanyard looking up and to the left." />
         <div class="member-text">
-          <h3>About Member</h3>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus ratione, aut fuga dolores ipsum id animi
-            distinctio tempora nobis officia? Culpa fuga tempore tenetur soluta saepe nostrum nisi cupiditate fugiat!
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia, optio! Minima commodi necessitatibus
-            corporis eveniet architecto veniam ex labore, aperiam maiores aut, quo harum sequi beatae, est voluptatum
-            ratione nisi?</p>
+          <h3>Reanna LaCasse</h3>
+          <p>Front End - WEBPT15</p>
+          <a href="#">LinkedIn</a>
         </div>
       </div>
     </section>
@@ -109,6 +100,7 @@
       <h2 class="footlogo">Sleep Tracker</h2>
     </div>
     <small>&copy; Copyright 2020, NAME</small>
+    <a href="mailto:sleeptracker@email.com">Contact Us</a>
   </footer>
 </body>
 
