--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <i class="fas fa-cloud-moon"></i><h1>Sleep Tracker</h1>
       </div>
       <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
+        <a href="/index.html">Home</a>
+        <a href="/about.html">About</a>
         <a href="#">Login</a>
       </nav>
     </div>
@@ -51,6 +51,7 @@
       <h2 class="footlogo">Sleep Tracker</h2>
     </div>
     <small>&copy; Copyright 2020, NAME</small>
+    <a href="mailto:sleeptracker@email.com">Contact Us</a>
   </footer>
 
 </body>
