--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
       <nav>
         <a href="/index.html">Home</a>
         <a href="/about.html">About</a>
-        <a href="#">Login</a>
+        <a href="https://circadia.netlify.com/">Login</a>
       </nav>
     </div>
   </header>
