--- a/about.html
+++ b/about.html
@@ -15,9 +15,10 @@
   <header>
     <div class="navContainer">
       <div class="logo">
-        <i class="fas fa-cloud-moon"></i>
-        <h1>Sleep Tracker</h1>
+        <i class="fas fa-cloud-moon"></i><h1>Sleep Tracker</h1>
       </div>
+      <input class="menu-btn" type="checkbox" id="menu-btn" />
+      <label class="menu-icon" for="menu-btn"><span class="nav-icon"></span></label>
       <nav>
         <a href="/index.html">Home</a>
         <a href="/about.html">About</a>
