--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
       <label class="menu-icon" for="menu-btn"><span class="nav-icon"></span></label>
       <nav>
         <a href="/index.html">Home</a>
-        <a href="/about.html">About</a>
+        <a href="about.html">About</a>
         <a href="https://circadia.netlify.com/">Login</a>
       </nav>
     </div>
