--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <input class="menu-btn" type="checkbox" id="menu-btn" />
       <label class="menu-icon" for="menu-btn"><span class="nav-icon"></span></label>
       <nav>
-        <a href="../index.html">Home</a>
-        <a href="../about.html">About</a>
+        <a href="../Front_End_Marketing/index.html">Home</a>
+        <a href="../Front_End_Marketing/about.html">About</a>
         <a href="https://circadia.netlify.com/">Login</a>
       </nav>
     </div>
@@ -42,7 +42,7 @@
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa fugiat illo debitis omnis eveniet doloribus? Minus, amet asperiores soluta commodi ab aperiam adipisci iure vitae, itaque dolores dolorum, tempore saepe. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi autem eius unde repellat minima, alias quod expedita cum eveniet perspiciatis saepe placeat, hic quisquam, ullam rerum repellendus. Odit, quae voluptatem.</p>
       </div>
       <div class="content-graph">
-        <img src="../assets/placeholder-chart.png" alt="Graph example" />
+        <img src="../Front_End_Marketing/assets/placeholder-chart.png" alt="Graph example" />
       </div>
     </section>
   </div>
