--- a/about.html
+++ b/about.html
@@ -20,8 +20,8 @@
       <input class="menu-btn" type="checkbox" id="menu-btn" />
       <label class="menu-icon" for="menu-btn"><span class="nav-icon"></span></label>
       <nav>
-        <a href="../index.html">Home</a>
-        <a href="../about.html">About</a>
+        <a href="../Front_End_Marketing/index.html">Home</a>
+        <a href="../Front_End_Marketing/about.html">About</a>
         <a href="https://circadia.netlify.com/">Login</a>
       </nav>
     </div>
