link in header/footer

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header>
     <div class="navContainer">
       <div class="logo">
-        <i class="fas fa-cloud-moon"></i><h1>Sleep Tracker</h1>
+        <a href="../Front_End_Marketing/index.html"><i class="fas fa-cloud-moon"></i><h1>Sleep Tracker</h1></a>
       </div>
       <input class="menu-btn" type="checkbox" id="menu-btn" />
       <label class="menu-icon" for="menu-btn"><span class="nav-icon"></span></label>
@@ -49,8 +49,10 @@
 
   <footer>
     <div class="logo">
-      <i class="fas fa-cloud-moon footlogo"></i>
-      <h2 class="footlogo">Sleep Tracker</h2>
+      <a href="../Front_End_Marketing/index.html">
+        <i class="fas fa-cloud-moon footlogo"></i>
+        <h2 class="footlogo">Sleep Tracker</h2>
+      </a>
     </div>
     <small>&copy; Copyright 2020, NAME</small>
     <a href="mailto:sleeptracker@email.com">Contact Us</a>
