--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
   <header>
     <div class="navContainer">
       <div class="logo">
-        <i class="fas fa-cloud-moon"></i><h1>Sleep Tracker</h1>
+        <a href="../Front_End_Marketing/index.html"><i class="fas fa-cloud-moon"></i></a><h1>Sleep Tracker</h1>
       </div>
       <input class="menu-btn" type="checkbox" id="menu-btn" />
       <label class="menu-icon" for="menu-btn"><span class="nav-icon"></span></label>
@@ -97,10 +97,10 @@
 
   <footer>
     <div class="logo">
-      <i class="fas fa-cloud-moon footlogo"></i>
+      <a href="../Front_End_Marketing/index.html"><i class="fas fa-cloud-moon footlogo"></i></a>
       <h2 class="footlogo">Sleep Tracker</h2>
     </div>
-    <small>&copy; Copyright 2020, NAME</small>
+    <small>&copy; 2020, Reanna LaCasse</small>
     <a href="mailto:sleeptracker@email.com">Contact Us</a>
   </footer>
 </body>
