--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </header>
 
   <div class="splash">
-    <button id="account">Create Account</button>
+    <button id="account" onclick="location.href='https://circadia.netlify.com/signup';">Create Account</button>
   </div>
   
   <div class="container">
