--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
           <a href="https://github.com/NickGonzalez04">GitHub</a>
         </div>
       </div>
-      <div class="member-reverse">
+      <div class="member member-reverse">
         <img src="https://ca.slack-edge.com/T4JUEB3ME-UMU0G7S7R-39d2605a998d-512"
           alt="Cai smiling and wearing a black polo in front of a wall." />
         <div class="member-text">
@@ -59,7 +59,7 @@
           <a href="https://github.com/fwesss">GitHub</a>
         </div>
       </div>
-      <div class="member-reverse">
+      <div class="member member-reverse">
         <img src="https://ca.slack-edge.com/T4JUEB3ME-UMSPM525V-5c3653c9fbb1-512"
           alt="Janessa outside in front of trees wearing a blue button up, smiling widely." />
         <div class="member-text">
@@ -71,6 +71,16 @@
         </div>
       </div>
       <div class="member">
+        <img src="https://ca.slack-edge.com/T4JUEB3ME-UJUGXB23W-9f39842ae662-512"
+          alt="A closeup of Eduardo smiling wearing a red t-shirt." />
+        <div class="member-text">
+          <h3>Eduardo Jimenez</h3>
+          <p>Front End - Web Unit 3</p>
+          <a href="https://www.linkedin.com/in/eduardo-jimenez-187b90194/">LinkedIn</a>
+          <a href="https://github.com/l8nightswithJS">GitHub</a>
+        </div>
+      </div>
+      <div class="member member-reverse">
         <img src="https://ca.slack-edge.com/T4JUEB3ME-UHUA5BZR9-9b0776ed37af-512"
           alt="Josh outside in front of a fir tree wearing a brown flannel and glasses, smiling and looking down to the left." />
         <div class="member-text">
@@ -79,16 +89,6 @@
           <a href="https://www.linkedin.com/in/josh-luscombe/">LinkedIn</a>
           <a href="https://github.com/CyrusTheCurator">GitHub</a>
           <a href="https://cyrusthecurator.github.io/portfolio-website/">Portfolio</a>
-        </div>
-      </div>
-      <div class="member-reverse">
-        <img src="https://ca.slack-edge.com/T4JUEB3ME-UJUGXB23W-9f39842ae662-512"
-          alt="A closeup of Eduardo smiling wearing a red t-shirt." />
-        <div class="member-text">
-          <h3>Eduardo Jimenez</h3>
-          <p>Front End - Web Unit 2</p>
-          <a href="https://www.linkedin.com/in/eduardo-jimenez-187b90194/">LinkedIn</a>
-          <a href="https://github.com/l8nightswithJS">GitHub</a>
         </div>
       </div>
       <div class="member">
