--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
           alt="Cai smiling and wearing a black polo in front of a wall." />
         <div class="member-text">
           <h3>Cai Nowicki</h3>
-          <p>Data Science</p>
+          <p>Data Science Unit 3</p>
           <a href="https://www.linkedin.com/in/cai-nowicki-82749312/">LinkedIn</a>
           <a href="https://github.com/dunkelweizen">GitHub</a>
       </div>
@@ -64,7 +64,7 @@
           alt="Janessa outside in front of trees wearing a blue button up, smiling widely." />
         <div class="member-text">
           <h3>Janessa Garrow</h3>
-          <p>Front End - Wed Unit 3</p>
+          <p>Front End - Web Unit 3</p>
           <a href="https://www.linkedin.com/in/janessa-garrow/">LinkedIn</a>
           <a href="https://github.com/jgarrow">GitHub</a>
           <a href="http://janessagarrow.com/">Portfolio</a>
