--- a/index.html
+++ b/index.html
@@ -35,12 +35,11 @@
   <div class="container">
     <section class="content">
       <div class="content-text">
-        <h3>Filler Text About Sleep</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam laborum animi necessitatibus ipsum sed facere
-          ea, rerum recusandae natus fuga perspiciatis, eveniet optio voluptatum beatae quo quisquam asperiores odio
-          quam.</p>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa fugiat illo debitis omnis eveniet doloribus? Minus, amet asperiores soluta commodi ab aperiam adipisci iure vitae, itaque dolores dolorum, tempore saepe. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi autem eius unde repellat minima, alias quod expedita cum eveniet perspiciatis saepe placeat, hic quisquam, ullam rerum repellendus. Odit, quae voluptatem.</p>
-      </div>
+        <h3>Take Control of Your Sleep!</h3>
+        <p>Analyze your sleep patterns, your lifestyle, and your mood to maximize your waking hours! Track when you go to sleep, when you wake-up, how long you slept each night, and your mood on waking to
+          better understand and control your own circadian rhythm. 
+        </p>
+          </div>
       <div class="content-graph">
         <img src="../Front_End_Marketing/assets/placeholder-chart.png" alt="Graph example" />
       </div>
