--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
           alt="Cai smiling and wearing a black polo in front of a wall." />
         <div class="member-text">
           <h3>Cai Nowicki</h3>
-          <p>Data Science Unit 3</p>
+          <p>Data Science - DS Unit 3</p>
           <a href="https://www.linkedin.com/in/cai-nowicki-82749312/">LinkedIn</a>
           <a href="https://github.com/dunkelweizen">GitHub</a>
       </div>
