new front end links

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
       <nav>
         <a href="../Front_End_Marketing/index.html">Home</a>
         <a href="../Front_End_Marketing/about.html">About</a>
-        <a href="https://circadia.netlify.com/">Login</a>
+        <a href="https://front-end-gspwy4s0w.now.sh/">Login</a>
       </nav>
     </div>
   </header>
