updated frontend links

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
       <nav>
         <a href="../Front_End_Marketing/index.html">Home</a>
         <a href="../Front_End_Marketing/about.html">About</a>
-        <a href="https://circadia.netlify.com/">Login</a>
+        <a href="https://front-end-gspwy4s0w.now.sh/">Login</a>
       </nav>
     </div>
   </header>
 
   <div class="splash">
-    <button id="account" onclick="location.href='https://circadia.netlify.com/signup';">Create Account</button>
+    <button id="account" onclick="location.href='https://front-end-gspwy4s0w.now.sh/';">Create Account</button>
   </div>
   
   <div class="container">
