--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </header>
 
   <div class="splash">
-    <button id="account" onclick="location.href='https://front-end-gspwy4s0w.now.sh/';">Create Account</button>
+    <button id="account" onclick="location.href='https://front-end-gspwy4s0w.now.sh/signup';">Create Account</button>
   </div>
   
   <div class="container">
